# finetuning_recipes

./: .gitignore  README.md  benchmark_quick.py  benchmark_reward.py  cuda-install.sh  evals.py  inference.py  mlx_export.py  pyproject.toml  script.py  sft.py  sft_hf.py  sft_unsloth.py  startup_script.sh
data_prep/: experiment_batch_aug.py  procedural_confounds.py
data_prep/cpt/: download_arxiv_files.py  get_dataset.py
data_prep/instruction/: generate_instruction_data_openrouter.py  generate_instruction_data_outlines_mlx.py  main.py  main_async.py  main_batch.py
data_prep/instruction/generate_outlines_examples/: bullets.py  comparison.py  continuation.py  main.py  model.py  qa_pairs.py  rephrase.py  retrieval.py  triplets.py
dataset/cpt/: download_arxiv_files.py  get_dataset.py
instruction_tuning/: app.py  inference.py  llm_comparison_judge.py  llm_judge.py  merge_adapter.py  print_judge_scores.py  sft.py  task_chat.py
instruction_tuning/mlx/: inference.py
paper_researcher/: model.py
preference_optimization/: train_preference.py  train_reward.py  trl_compat.py
reasoning/: EVALUATION.md  env.py  eval_checkpoint.py  eval_mlx_checkpoints.py  evaluate_base.py  grpo.py
reasoning/grpo/: gpu_80gb.yaml  grpo_utils.py  inference.py  rollout.py  smoke.yaml  train.py
reasoning_train/: REWARD_MODEL_FINDINGS.md  augment.py  reward_model.py  train_reward_model.py
reward_models/: REWARD_MODEL_FINDINGS.md
tests/reasoning/: test_evaluate_base.py  test_grpo.py
