[project]
name = "unsloth-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.3.0",
    "peft>=0.18.1",
    "rich>=14.3.2",
    "rouge-score>=0.1.2",
    "torch>=2.7",
    "torchvision>=0.25.0",
    "transformers>=4.57.6",
    "trl>=0.24.0",
    "unsloth>=2026.1.4",
]
